@@ -1511,6 +1511,12 @@ Same as \fB\-l, \-\-label\fR
 \fBSLURM_MEM_BIND\fR
 Same as \fB\-\-mem_bind\fR
 .TP
+\fBSLURM_MEM_PER_CPU\fR
+Same as \fB\-\-mem\-per\-cpu\fR
+.TP
+\fBSLURM_MEM_PER_NODE\fR
+Same as \fB\-\-mem\fR
+.TP
 \fBSLURM_MPI_TYPE\fR
 Same as \fB\-\-mpi\fR
 .TP
