@@ -963,6 +963,34 @@ env_array_for_job(char ***dest, const resource_allocation_response_msg_t *alloc,
 	env_array_overwrite_fmt(dest, "SLURM_JOB_CPUS_PER_NODE", "%s", tmp);
 	xfree(tmp);
 
+	if (alloc->pn_min_memory & MEM_PER_CPU) {
+		uint32_t tmp_mem = alloc->pn_min_memory & (~MEM_PER_CPU);
+		env_array_overwrite_fmt(dest, "SLURM_MEM_PER_CPU", "%u",
+					tmp_mem);
+#ifdef HAVE_CRAY
+		env_array_overwrite_fmt(dest, "CRAY_AUTO_APRUN_OPTIONS",
+					"\"-m%u\"", tmp_mem);
+#endif
+	} else if (alloc->pn_min_memory) {
+		uint32_t tmp_mem = alloc->pn_min_memory;
+#ifdef HAVE_CRAY
+		uint32_t i, max_cpus_per_node = 1;
+		for (i = 0; i < alloc->num_cpu_groups; i++) {
+			if ((i == 0) ||
+			    (max_cpus_per_node < alloc->cpus_per_node[i])) {
+				max_cpus_per_node = alloc->cpus_per_node[i];
+			}
+		}
+#endif
+		env_array_overwrite_fmt(dest, "SLURM_MEM_PER_NODE", "%u",
+					tmp_mem);
+#ifdef HAVE_CRAY
+		tmp_mem /= max_cpus_per_node;
+		env_array_overwrite_fmt(dest, "CRAY_AUTO_APRUN_OPTIONS",
+					"\"-m%u\"", tmp_mem);
+#endif
+	}
+
 	/* OBSOLETE, but needed by MPI, do not remove */
 	env_array_overwrite_fmt(dest, "SLURM_JOBID", "%u", alloc->job_id);
 	env_array_overwrite_fmt(dest, "SLURM_NNODES", "%u", node_cnt);
@@ -1123,6 +1151,35 @@ env_array_for_batch_job(char ***dest, const batch_job_launch_msg_t *batch,
 	slurm_step_layout_destroy(step_layout);
 	env_array_overwrite_fmt(dest, "SLURM_TASKS_PER_NODE", "%s", tmp);
 	xfree(tmp);
+
+	if (batch->pn_min_memory & MEM_PER_CPU) {
+		uint32_t tmp_mem = batch->pn_min_memory & (~MEM_PER_CPU);
+		env_array_overwrite_fmt(dest, "SLURM_MEM_PER_CPU", "%u",
+					tmp_mem);
+#ifdef HAVE_CRAY
+		env_array_overwrite_fmt(dest, "CRAY_AUTO_APRUN_OPTIONS",
+					"\"-m%u\"", tmp_mem);
+#endif
+	} else if (batch->pn_min_memory) {
+		uint32_t tmp_mem = batch->pn_min_memory;
+#ifdef HAVE_CRAY
+		uint32_t i, max_cpus_per_node = 1;
+		for (i = 0; i < batch->num_cpu_groups; i++) {
+			if ((i == 0) ||
+			    (max_cpus_per_node < batch->cpus_per_node[i])) {
+				max_cpus_per_node = batch->cpus_per_node[i];
+			}
+		}
+#endif
+		env_array_overwrite_fmt(dest, "SLURM_MEM_PER_NODE", "%u",
+					tmp_mem);
+#ifdef HAVE_CRAY
+		tmp_mem /= max_cpus_per_node;
+		env_array_overwrite_fmt(dest, "CRAY_AUTO_APRUN_OPTIONS",
+					"\"-m%u\"", tmp_mem);
+#endif
+	}
+
 	return SLURM_SUCCESS;
 
 }
